--- a/.overrides/partials/post-list.html
+++ b/.overrides/partials/post-list.html
@@ -3,8 +3,13 @@
 
 <style>
   .blog-item {
-    padding: 0.5em;
+    padding-left: 1em;
+    padding-bottom: 0.5em;
+    padding-right: 0.5em;
+    background-color: #111144;
+    margin-bottom: 1rem;
   }
+
   .blog-item-title {
     font-size: 1.5em;
     margin-bottom: 0.5em;
