--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -6,11 +6,7 @@
     <div class="md-footer-meta md-typeset">
         <div class="md-footer-meta__inner md-grid">
             <div class="md-copyright">
-                {% if config.copyright %}
-                  <div class="md-copyright__highlight">
-                    {{ config.copyright }}
-                  </div>
-                {% endif %}
+                {% include "partials/copyright.html" %}
                   Made with
                   <a href="{{ config.site_url }}made-with.html" target="_blank" rel="noopener">
                     some assemblage
