Categories and archives

--- a/overrides/partials/post-list.html
+++ b/overrides/partials/post-list.html
@@ -6,7 +6,7 @@
     padding-left: 1em;
     padding-bottom: 0.5em;
     padding-right: 0.5em;
-    background-color: #111144;
+    background-color: var(--md-post-item-bg-color) 
     margin-bottom: 1rem;
   }
 
