--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -89,6 +89,7 @@ background: linear-gradient(280deg, rgba(16, 7, 117, 1) 0%, rgba(10, 5, 79, 1) 5
   --md-admonition-bg-color: transparent;
   --md-code-fg-color: #ffffff;
   --md-code-bg-color: transparent;
+  --md-post-item-bg-color: #111144;
   --md-typeset-table-color: #aaaaaa;
     --md-code-hl-punctuation-color: #ffffff;
     --md-code-hl-variable-color: #ffffff;
@@ -108,6 +109,7 @@ background: linear-gradient(280deg, rgba(16, 7, 117, 1) 0%, rgba(10, 5, 79, 1) 5
     --md-default-fg-color--light: #000000;
   --md-default-fg-color--lighter: #ffffff;
   --md-default-bg-color: transparent;
+  --md-post-item-bg-color: #cccccc;
 
 /*  --md-typeset-color: #ffffff;
   --md-typeset-a-color: #8888ff; 
